<resources>
    <string name="app_name">Assignment-II-(Orientation Handling)</string>
    <string name="logo_desc">App Logo</string>
    
    <!-- Registration Form Labels -->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="birthday_label">Birthday</string>
    <string name="phone_label">Phone Number</string>
    <string name="home_address_label">Home Address</string>
    <string name="email_label">Email Address</string>
    
    <!-- Placeholders -->
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="birthday_hint">Select your birthday</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="home_address_hint">Enter your home address</string>
    <string name="email_hint">Enter your email address</string>
</resources>
